syntax= "proto3";

package payment;

service PaymentService{
    rpc Pay(Payment)returns(Response){}
}

message Payment{
    string transacno=1;
    string nomclient=2;
    string prenomclient=3;
    string telephone=4;
    string datepaymentuser=5;
    string conventionno=6;
    string policeno=7;
    string montant=8;
    string createdAt=9;
}

message Response{
    bool done=1;
    string description=2;
    Payment payment=3;
    repeated Error errors=4;
}
message Error{
    int32 code=1;
    string description=2;
}

